<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="project3.csc214.myapp.login_register.FoodPreference">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <TextView
            android:id="@+id/textWork"
            android:layout_margin="15dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/your_work_days"
            android:textSize="20sp"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <CheckBox
                android:id="@+id/checkboxSun"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/s"
                android:onClick="onCheckBoxClikced"/>
            <CheckBox
                android:id="@+id/checkboxMon"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/m"
                android:onClick="onCheckBoxClikced"/>
            <CheckBox
                android:id="@+id/checkboxTue"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/t"
                android:onClick="onCheckBoxClikced"/>
            <CheckBox
                android:id="@+id/checkboxWen"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/w"
                android:onClick="onCheckBoxClikced"/>

            <CheckBox
                android:id="@+id/checkboxThu"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/t"
                android:onClick="onCheckBoxClikced"/>
            <CheckBox
                android:id="@+id/checkboxFri"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/f"
                android:onClick="onCheckBoxClikced"/>

            <CheckBox
                android:id="@+id/checkboxSat"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/s"
                android:onClick="onCheckBoxClikced"/>
        </LinearLayout>

        <TextView
            android:id="@+id/textAllergy"
            android:layout_margin="15dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/your_allergy"
            android:textSize="20sp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <CheckBox
                android:id="@+id/checkboxPeanuts"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/peanuts"
                android:onClick="onCheckBoxClikced"/>

            <CheckBox
                android:id="@+id/checkboxEgg"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/egg"
                android:onClick="onCheckBoxClikced"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <CheckBox
                android:id="@+id/checkboxDiary"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/diary"
                android:onClick="onCheckBoxClikced"/>

            <CheckBox
                android:id="@+id/checkboxSeaFood"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/sea_food"
                android:onClick="onCheckBoxClikced"/>
        </LinearLayout>

        <TextView
            android:id="@+id/textMealExpanse"
            android:layout_margin="15dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/your_average_meal_expanse"
            android:textSize="20sp"/>
        <LinearLayout
            android:layout_marginTop="15dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView

                android:layout_weight="2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/lunch"/>
            <SeekBar
                android:id="@+id/seekBarLunch"
                android:layout_weight="8"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                />
            <TextView
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/seekBarValueforL"/>
        </LinearLayout>
        <LinearLayout
            android:layout_marginTop="15dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView

                android:layout_weight="2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/dinner"/>
            <SeekBar
                android:id="@+id/seekBarDinner"
                android:layout_weight="8"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
               />
            <TextView
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/seekBarValueforD"/>
        </LinearLayout>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:layout_gravity="center"
        android:id="@+id/login_food"/>
    </LinearLayout>


</FrameLayout>
